fix: Solve contrast issues
solve contrast issues

--- a/04_team/scss/04_components/_popularEmoticon.scss
+++ b/04_team/scss/04_components/_popularEmoticon.scss
@@ -37,7 +37,7 @@
     height: 25px;
   }
   &__author {
-    color: #999999;
+    color: $fontGray2;
     font-size: 0.8rem;
   }
   &__img {
